<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="@+id/imageView3" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/disered_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" android:textColor="@color/colorAccent" android:textSize="16sp"
            android:fontFamily="@font/montserrat" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="279dp"
                tools:layout_editor_absoluteX="156dp" android:id="@+id/toggleButton"
                android:background="@drawable/swoosh_toggle" android:textOff="@string/mens" android:textOn="@string/mens"
                android:textColor="@color/colorAccent"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="393dp"
                tools:layout_editor_absoluteX="155dp" android:id="@+id/toggleButton3"
                android:background="@drawable/swoosh_toggle" android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp" android:textOff="@string/womens" android:textOn="@string/womens"
                android:textColor="@color/colorAccent"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="335dp"
                tools:layout_editor_absoluteX="155dp" android:id="@+id/toggleButton2"
                android:background="@drawable/swoosh_toggle" android:textOff="@string/co_ed" android:textOn="@string/co_ed"
                android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/b_next" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent" android:onClick="nextOnclicked"/>
</android.support.constraint.ConstraintLayout>