<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/Background" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:contentDescription="@string/swoosh_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/I_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView5" android:textColor="@color/colorAccent" android:fontFamily="@font/montserrat"
            android:textSize="18sp" tools:text="I am a :" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.0">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="0dp"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="182dp"
                tools:layout_editor_absoluteX="67dp" android:id="@+id/toggleButton4"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/beginner" android:textOn="@string/beginner" android:textSize="15sp"
                android:fontFamily="@font/montserrat" android:layout_weight="1" android:layout_marginEnd="16dp"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="0dp"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="182dp"
                tools:layout_editor_absoluteX="247dp" android:id="@+id/toggleButton5"
                android:background="@drawable/swoosh_toggle" android:textColor="@color/colorAccent"
                android:textOff="@string/baller" android:textOn="@string/baller" android:textSize="15sp"
                android:fontFamily="@font/montserrat" android:layout_weight="1" android:layout_marginStart="16dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>