<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:background="@drawable/swoosh_button"
            app:layout_constraintDimensionRatio="" android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:fontFamily="@font/montserrat"
            android:textColor="@color/colorAccent" android:textSize="48sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.482"
            android:textStyle="bold" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:fontFamily="@font/montserrat"
            android:textSize="24sp" android:text="@string/on_going_all_out" android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="248dp"
            android:layout_height="41dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3" android:text="@string/finde_a_team_in_you_city_and_dominate_the_league"
            android:fontFamily="@font/montserrat" android:textColor="@color/colorAccent" android:singleLine="false"
            android:textAlignment="center" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/b_getstarted" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/montserrat" android:textSize="16sp" android:background="@drawable/swoosh_button"
            android:textColor="@color/colorAccent" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>